--- a/Hair_Salon/index.html
+++ b/Hair_Salon/index.html
@@ -14,6 +14,8 @@
 
     <body>
 
+<!-- I will finish the project before the course ends -->
+
       <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
           <a href="#" class="navbar-brand">Hair Salon Pelito Fino</a>
@@ -168,7 +170,7 @@
           </div>
 
 
-          
+
 
 
 
